--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Media Session API</title>
     <meta name="theme-color" content="#606c76">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/icons/music-64.png" type="image/png">
+    <link rel="shortcut icon" href="./icons/music-64.png" type="image/png">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/playlist.js"></script>
